<?xml version="1.0"?>
<package format="2">
    <name>raspimouse_navigation</name>
    <version>0.0.0</version>
    <description>The raspimouse_navigation package</description>
    <maintainer email="todo@todo.com">todo</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>map_server</exec_depend>
    <exec_depend>move_base</exec_depend>
    <exec_depend>amcl</exec_depend>
    <exec_depend>laser_scan_matcher</exec_depend>
    <exec_depend>tf</exec_depend>

    <export>
    </export>
</package>