<?xml version="1.0"?>
<package format="2">
    <name>raspimouse_slam</name>
    <version>0.0.0</version>
    <description>The raspimouse_slam package</description>
    <maintainer email="support@rt-net.jp">RT Corporation</maintainer>
    <author email="kozasa@rt-net.jp">Shuhei Kozasa</author>
    <license>Apache-2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <exec_depend>gmapping</exec_depend>
    <exec_depend>hls_lfcd_lds_driver</exec_depend>
    <exec_depend>joy</exec_depend>
    <exec_depend>map_server</exec_depend>
    <exec_depend>raspimouse_ros_2</exec_depend>
    <exec_depend>raspimouse_ros_examples</exec_depend>
    <exec_depend>rplidar_ros</exec_depend>
    <exec_depend>teleop_twist_keyboard</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>urg_node</exec_depend>
</package>